# mini-redis

./: CMakeLists.txt  readme.md
engine/: .gitignore  datastore.cpp  datastore.h  lru_cache.h  main.cpp
frontend/: index.html  script.js  styles.css
include/: lru_cache.h
src/: lru_cache.cpp  main.cpp
